...
    return PlatformScaffold(
      iosContentPadding: true,
      appBar: PlatformAppBar(
        title: Text("Simple Blockchain (etcd)"),
        trailingActions: [
          PlatformIconButton(
            key: Key("add"),
            icon: Icon(PlatformIcons(context).add),
            onPressed: () {
              final rootContext = context;
              showPlatformDialog(
                context: context,
                // barrierDismissible: true,
...
